--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^0.0.24",
+    "@google/generative-ai": "^0.14.0",
     "@langchain/community": "^0.2.15",
+    "@langchain/core": "^0.2.11",
     "@langchain/google-genai": "^0.0.21",
     "ai": "^3.2.15",
+    "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.4.5",
     "langchain": "^0.2.8",
+    "marked": "^13.0.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -27,6 +32,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
