--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@langchain/community": "^0.2.15",
     "@langchain/core": "^0.2.11",
     "@langchain/google-genai": "^0.0.21",
+    "@vercel/analytics": "^1.3.1",
     "ai": "^3.2.15",
     "cheerio": "1.0.0-rc.12",
     "dotenv": "^16.4.5",
